--- a/index.html
+++ b/index.html
@@ -399,6 +399,131 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #84 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma84.jpg"></div>
+                                <div class="slide"><img src="./images/ma841.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #84 - ĐÃ SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #87 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma87.jpg"></div>
+                                <div class="slide"><img src="./images/ma871.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">470.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #87 - ĐÃ SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #89 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma89.jpg"></div>
+                                <div class="slide"><img src="./images/ma891.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #89 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #91 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma91.jpg"></div>
+                                <div class="slide"><img src="./images/ma911.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #91 - ĐÃ SPC ID - Hall 15</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #92 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma92.jpg"></div>
+                                <div class="slide"><img src="./images/ma921.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #92 - ĐÃ SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
