--- a/index.html
+++ b/index.html
@@ -449,6 +449,156 @@
                         </div>
                     </div>
                 </li>   
+                <!-- Mã #96 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma96.jpg"></div>
+                                <div class="slide"><img src="./images/ma961.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #96 - ĐÃ SPC ID - Hall 9</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #98 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma98.jpg"></div>
+                                <div class="slide"><img src="./images/ma981.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #98 - ĐÃ SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #99 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma99.jpg"></div>
+                                <div class="slide"><img src="./images/ma991.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">700.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #99 - ĐÃ SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>   
+                <!-- Mã #100 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma100.jpg"></div>
+                                <div class="slide"><img src="./images/ma1001.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #100 - ĐÃ SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>  
+                <!-- Mã #102 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma102.jpg"></div>
+                                <div class="slide"><img src="./images/ma1021.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">3.500.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #102 - ĐÃ SPC ID - Hall 15</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #104 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma104.jpg"></div>
+                                <div class="slide"><img src="./images/ma1041.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #104 - ĐÃ SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>  
 
             </ul>
         </div>
