--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Hòa Nhân COC</title>
 </head>
 <body>
+    <script>alert('Tất cả Acc trên Shop đang được Sale 10%')</script>
     <div id="menu">
         <ul>
             <li><a href="./index.html">Trang chủ</a></li>
@@ -66,7 +67,7 @@
                                 <div class="slide"><img src="./images/ma56.jpg"></div>
                                 <div class="slide"><img src="./images/ma561.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -91,7 +92,7 @@
                                 <div class="slide"><img src="./images/ma63.jpg"></div>
                                 <div class="slide"><img src="./images/ma631.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -116,7 +117,7 @@
                                 <div class="slide"><img src="./images/ma69.jpg"></div>
                                 <div class="slide"><img src="./images/ma691.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">300.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -141,7 +142,7 @@
                                 <div class="slide"><img src="./images/ma75.jpg"></div>
                                 <div class="slide"><img src="./images/ma751.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -166,7 +167,7 @@
                                 <div class="slide"><img src="./images/ma78.jpg"></div>
                                 <div class="slide"><img src="./images/ma781.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -191,7 +192,7 @@
                                 <div class="slide"><img src="./images/ma79.jpg"></div>
                                 <div class="slide"><img src="./images/ma791.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -216,7 +217,7 @@
                                 <div class="slide"><img src="./images/ma80.jpg"></div>
                                 <div class="slide"><img src="./images/ma801.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">450.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -241,7 +242,7 @@
                                 <div class="slide"><img src="./images/ma81.jpg"></div>
                                 <div class="slide"><img src="./images/ma811.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -266,7 +267,7 @@
                                 <div class="slide"><img src="./images/ma82.jpg"></div>
                                 <div class="slide"><img src="./images/ma821.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -291,7 +292,7 @@
                                 <div class="slide"><img src="./images/ma84.jpg"></div>
                                 <div class="slide"><img src="./images/ma841.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -316,7 +317,7 @@
                                 <div class="slide"><img src="./images/ma87.jpg"></div>
                                 <div class="slide"><img src="./images/ma871.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">470.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -341,7 +342,7 @@
                                 <div class="slide"><img src="./images/ma89.jpg"></div>
                                 <div class="slide"><img src="./images/ma891.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -366,7 +367,7 @@
                                 <div class="slide"><img src="./images/ma91.jpg"></div>
                                 <div class="slide"><img src="./images/ma911.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -391,7 +392,7 @@
                                 <div class="slide"><img src="./images/ma92.jpg"></div>
                                 <div class="slide"><img src="./images/ma921.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -416,7 +417,7 @@
                                 <div class="slide"><img src="./images/ma93.jpg"></div>
                                 <div class="slide"><img src="./images/ma931.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">750.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -441,7 +442,7 @@
                                 <div class="slide"><img src="./images/ma94.jpg"></div>
                                 <div class="slide"><img src="./images/ma941.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.850.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -466,7 +467,7 @@
                                 <div class="slide"><img src="./images/ma96.jpg"></div>
                                 <div class="slide"><img src="./images/ma961.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -491,7 +492,7 @@
                                 <div class="slide"><img src="./images/ma98.jpg"></div>
                                 <div class="slide"><img src="./images/ma981.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -516,7 +517,7 @@
                                 <div class="slide"><img src="./images/ma99.jpg"></div>
                                 <div class="slide"><img src="./images/ma991.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">700.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -541,7 +542,7 @@
                                 <div class="slide"><img src="./images/ma100.jpg"></div>
                                 <div class="slide"><img src="./images/ma1001.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -566,7 +567,7 @@
                                 <div class="slide"><img src="./images/ma102.jpg"></div>
                                 <div class="slide"><img src="./images/ma1021.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">3.500.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
@@ -591,7 +592,7 @@
                                 <div class="slide"><img src="./images/ma104.jpg"></div>
                                 <div class="slide"><img src="./images/ma1041.jpg"></div>
                             </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
